--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "funding": "https://github.com/sponsors/AndersDJohnson",
   "keywords": [],
   "author": "Anders D. Johnson",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "mkdirp": "^1.0.4"
+  }
 }
