chore: package files only index

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "keywords": [],
   "author": "Anders D. Johnson",
   "license": "ISC",
+  "files": ["index.js"],
   "dependencies": {
     "mkdirp": "^1.0.4"
   }
