--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+test
 
 # Created by https://www.toptal.com/developers/gitignore/api/node,macos,vim,intellij
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,macos,vim,intellij
