--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Utility for npm init create-* scripts.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "rm -rf test && node __tests__/index.test.js test"
   },
   "repository": "AndersDJohnson/base-create",
   "funding": "https://github.com/sponsors/AndersDJohnson",
